force-app/main/default/objects/ConverseRMS__c/ConverseRMS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Converse RMS Setting</description>
    <label>ConverseRMS</label>
</CustomObject>