force-app/main/default/objects/ConverseRMS__c/fields/ExRate__c.field-meta.xml
<CustomField>
    <fullName>ExRate__c</fullName>
    <defaultValue>7.1</defaultValue>
    <label>ExRate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>