force-app/main/default/objects/ConverseRMS__c/fields/Offset_Of_CS_Confirm_To_WSL_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Offset_Of_CS_Confirm_To_WSL_Confirm__c</fullName>
    <label>Offset Of CS Confirm To WSL Confirm</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>