force-app/main/default/objects/ConverseRMS__c/fields/Offset_Of_Delivered_To_Insp__c.field-meta.xml
<CustomField>
    <fullName>Offset_Of_Delivered_To_Insp__c</fullName>
    <label>Offset Of Delivered To Insp</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>