force-app/main/default/objects/ConverseRMS__c/fields/Offset_Of_Inbound_To_Completed__c.field-meta.xml
<CustomField>
    <fullName>Offset_Of_Inbound_To_Completed__c</fullName>
    <label>Offset Of Inbound To Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>