force-app/main/default/objects/ConverseRMS__c/fields/Offset_Of_Insp_To_CS_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Offset_Of_Insp_To_CS_Confirm__c</fullName>
    <label>Offset Of Insp To CS Confirm</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>