force-app/main/default/objects/ConverseRMS__c/fields/Offset_Of_Kick_Off_To_PTLF__c.field-meta.xml
<CustomField>
    <fullName>Offset_Of_Kick_Off_To_PTLF__c</fullName>
    <label>Offset Of Kick Off To PTLF</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>