force-app/main/default/objects/ConverseRMS__c/fields/Offset_Of_LF_Inbound_To_CS_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Offset_Of_LF_Inbound_To_CS_Inbound__c</fullName>
    <label>Offset Of LF Inbound To CS Inbound</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>