force-app/main/default/objects/ConverseRMS__c/fields/Offset_Of_PTLF_To_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Offset_Of_PTLF_To_Delivered__c</fullName>
    <label>Offset Of PTLF To Delivered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>