force-app/main/default/objects/ConverseRMS__c/fields/Offset_Of_WSL_Confirm_To_LF_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Offset_Of_WSL_Confirm_To_LF_Inbound__c</fullName>
    <label>Offset Of WSL Confirm To LF Inbound</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>