force-app/main/default/objects/ConverseRMS__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <defaultValue>1.13</defaultValue>
    <description>Tax rate</description>
    <label>TaxRate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>